fixed log in/log out on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -190,4 +190,7 @@ h6 {
   #nav-mobile a {
     font-size: 2vw;
   }
+  .auth-card {
+    max-width: 95%;
+  }
 }
